<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hydration_reminder" />

    <!-- Input -->
    <EditText
        android:id="@+id/etInterval"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_minutes"
        android:inputType="number"
        android:autofillHints="time"
        android:maxWidth="200dp"/>

    <!-- Buttons row -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btnStart"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/btnStop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/btnShareMoodSummary"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_mood_summary" />
    </LinearLayout>

    <!-- Status -->
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_off"
        android:paddingTop="8dp" />

</LinearLayout>
